# quakepg-engine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  imgui.ini
.claude/: config.yaml
assets/: Biblically Accurate Angel (Seraphim).rar  PS1 Biblically Accurate Angel.rar
assets/Biblically Accurate Angel (Seraphim)/: Seraphim.blend  Seraphim.blend1  Seraphim.fbx  Seraphim.mtl
assets/PS1 Biblically Accurate Angel (2)/: Biblically_Accurate_Angel.blend  Biblically_Accurate_Angel.blend1  Biblically_Accurate_Angel.fbx  Biblically_Accurate_Angel.mtl
assets/bigfoot/fbx/: bigfoot.fbx
assets/bigfoot/glb/: bigfoot.glb
assets/shaders/: basic.vert  psx.frag  psx.vert
assets/textures/: README.txt
engine/: CMakeLists.txt
engine/include/engine/: engine.h
engine/include/engine/core/: assert.h  console.h  debug_ui.h  imgui_theme.h  log.h  math.h  types.h
engine/include/engine/physics/: collision.h
engine/include/engine/platform/: input.h  timer.h  window.h
engine/include/engine/renderer/: camera.h  material.h  mesh.h  model.h  renderer.h  shader.h  texture.h
engine/src/core/: console.cpp  debug_ui.cpp  imgui_theme.cpp
engine/src/physics/: collision.cpp
engine/src/platform/: input.cpp  timer.cpp  window.cpp
engine/src/renderer/: camera.cpp  material.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  texture.cpp
game/: CMakeLists.txt
game/include/game/: weapon.h
game/include/game/dungeon/: dungeon_map.h
game/src/: main.cpp  weapon.cpp
game/src/dungeon/: dungeon_map.cpp
scripts/: build-all.sh  build-docs.sh  build-game.sh  doxygen-autodoc.py  run.sh
